# Movies-API

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  helper_functions.py  main.py  pyproject.toml  requirements.txt  review.txt
app/: example.py  main.py  query.py  schema.py  settings.py  utils.py
tests/: test_api.py
