[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = ""
authors = ["Soraia Tavares <soraiaoliveira094@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
httpx = "^0.19.0"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.3"
strawberry-graphql = "^0.83.1"
requests = "^2.28.2"
graphene = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"
coverage-badge = "^1.1.0"
