[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = ""
authors = ["Soraia Tavares <soraiaoliveira094@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.94.1"
uvicorn = "^0.15.0"
httpx = "^0.23.0"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.3"
strawberry-graphql = "^0.83.1"
requests = "^2.28.2"
graphene = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"
coverage-badge = "^1.1.0"
black = {version = "^23.3.0", allow-prereleases = true}
click = "8.0.0"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
